--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -2,6 +2,43 @@
    SE Custom styles for buttons and links
    ========================================================================== */
 
+// Remove default blue outlines
+*:active,
+.link:active {
+    outline: none !important
+}
+
+*,
+*:active {
+    outline: none;
+    :focus {
+        outline:none;
+    }
+    ::-moz-focus-inner {
+        border:0;
+    }
+}
+
+a:active {
+    outline: none;
+    :focus {
+        outline:none;
+    }
+    ::-moz-focus-inner {
+        border:0;
+    }
+}
+
+button::-moz-focus-inner {
+    border: 0;
+    :focus {
+        outline:none;
+    }
+    ::-moz-focus-inner {
+        border:0;
+    }
+}
+
 .button {
     line-height: 1.5;
     height: auto;
@@ -10,8 +47,9 @@
     width: auto!important;
     text-transform: none;
     font-weight: 400;
+    margin-bottom : 15px;
     @include transition(background-color 0.5s, color 0.5s);
-    &.button--primary {
+    &.button-primary {
         background-color: $se-blue;
         &.disabled {
             background-color: $se-dis-primary;
@@ -23,8 +61,12 @@
             -moz-box-shadow:inset 0 0 0 3px $se-blue;
             @include transition(background-color 0.5s, color 0.5s);
         }
+        &:active,
+        &:focus {
+            color: $se-white;
+        }
     }
-    &.button--secondary {
+    &.button-secondary {
         background-color: $se-light-blue;
         &.disabled {
             background-color: $se-dis-secondary;
@@ -36,18 +78,53 @@
             -moz-box-shadow:inset 0 0 0 3px $se-light-blue;
             @include transition(background-color 0.5s, color 0.5s);
         }
+        &:active,
+        &:focus  {
+            color: $se-white;
+        }
     }
     &.disabled {
         &:hover {
             cursor: default;
         }
     }
-    &.button--tertiary {
+    &.button-tertiary {
         background-color: transparent;
         color: $se-blue;
         padding: 0.5em 0;
         &:not(.disabled):hover {
             color: $se-light-blue;
+        }
+    }
+    &.inline {
+        padding: 1em;
+        position: relative;
+        top: -2px;
+        display: inline-block;
+    }
+}
+
+.button {
+    @media all and (max-width: $screen-xxs-max) {
+        width: 100% !important;
+        margin-right: 0 !important;
+    }
+}
+
+.button {
+    &.button-back {
+        background: none;
+        color: $se-blue;
+        padding-left: 0;
+        &:before {
+            content:'\f053';
+            font-family: FontAwesome;
+            padding: 0 10px 0 0;
+            position: relative;
+            top: 1px;
+        }
+        @media all and (max-width: $screen-xxs-max) {
+            text-align: left;
         }
     }
 }
