--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -12,7 +12,13 @@ body {
     font-size: 16px;
     line-height: 23px;
     font-weight: normal;
+    -­webkit­font­smoothing: antialiased;
+    @media all and (max-width: $screen-xxs-max) {
+        font-size: 15px;
+        line-height: 21px;
+    }
 }
+
 
 // Reference Din fonts for headings //
 
@@ -65,8 +71,4 @@ body {
     url('/se-style-guide/assets/fonts/Din/din-regu-webfont.svg#din-regularregular') format('svg');
     font-weight: normal;
     font-style: normal;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: din-mediumregular;
 }
