--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -2,112 +2,309 @@
    SE Custom styles for typography 
    ========================================================================== */
 
-/*------------------------------------*\
-    $INFORMATIONAL NOTES
-\*------------------------------------*/
-
-.info-note.note:before {
-  background: url("../img/icons/note.png") no-repeat 0 0 transparent !important;
-}
-@media only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 2.6 / 2), only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min-device-pixel-ratio: 1.3), only screen and (min-resolution: 1.3dppx) {
-  .info-note.note:before {
-    background-image: url("../img/icons/note_@2x.png") !important;
-    background-size: 26px 26px !important;
-  }
-}
-.info-note.caution:before {
-  background: url("../img/icons/caution.png") no-repeat 0 0 transparent !important;
-}
-@media only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 2.6 / 2), only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min-device-pixel-ratio: 1.3), only screen and (min-resolution: 1.3dppx) {
-  .info-note.caution:before {
-    background-image: url("../img/icons/caution_@2x.png") !important;
-    background-size: 36px 36px !important;
-  }
-}
+// -- Headings -- //
 
 h1 {
-  font-size: 49px;
-  line-height: 56px;
+    font-size: 49px;
+    line-height: 56px;
+    @media all and (max-width: $screen-xxs-max) {
+        font-size: 36px;
+        line-height: 42px;
+    }
+}
+
+// override bootstrap
+form h2 {
+    margin-top: inherit;
+    font-size: 26px;
 }
 
 h2 {
-  font-size: 26px;
-  line-height: 35px;
+    font-size: 26px;
+    line-height: 35px;
+    @media all and (max-width: $screen-xxs-max) {
+        font-size: 20px;
+        line-height: 28px;
+    }
+}
+
+h2 ~ table {
+    margin-top: 0;
 }
 
 h3 {
-  font-size: 19px;
-  line-height: 28px;
+    font-size: 19px;
+    line-height: 28px;
+    @media all and (max-width: $screen-xxs-max) {
+        font-size: 16px;
+        line-height: 25px;
+    }
 }
 
 h4 {
-  font-size: 16px;
-  line-height: 25px;
+    font-size: 16px;
+    line-height: 25px;
+    @media all and (max-width: $screen-xxs-max) {
+    }
 }
 
 h5 {
-  font-size: 14px;
-  line-height: 23px;
+    font-size: 14px;
+    line-height: 23px;
+    @media all and (max-width: $screen-xxs-max) {
+    }
 }
 
 h6 {
-  font-size: 12px;
-  line-height: 20px;
+    font-size: 12px;
+    line-height: 20px;
+    @media all and (max-width: $screen-xxs-max) {
+    }
 }
 
-h1,h2,h3,h4,h5,h6 {
-  font-weight: 700;
+h1, h2, h3, h4, h5, h6 {
+    font-family: din-mediumregular, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1 {
+    font-weight: 700;
+}
+
+h2, h3, h4, h5, h6 {
+    font-weight: 500;
+}
+
+.text-large {
+    font-size: 20px;
 }
 
 .leader {
-  font-size: 25px;
-  line-height: 34px;
-  font-weight: 300;
-  margin: 0 0 35px 0;
+    font-size: 25px;
+    line-height: 34px;
+    font-weight: 300;
+    margin: 0 0 35px 0;
+    word-wrap: break-word;
+    @media all and (max-width: $screen-xxs-max) {
+        font-size: 19px;
+        line-height: 28px;
+        margin-bottom: 15px;
+    }
+}
+
+// Create margin on First .leader within a container //
+.container > .row > div > .leader {
+    margin-top: 15px;
 }
 
 // Override Scot Gov color //
 .emphasis {
-  &:before {
-    background-color: $se-blue;
-  }
+    display: inline-block;
+    font-weight: 500;
+    padding-top: 20px;
+    position: relative;
+    &:before {
+        background-color: $se-blue;
+        border-radius: 8px;
+        content: '';
+        height: 8px;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        @media all and (max-width: $screen-xxs-max) {
+            height: 6px;
+        }
+    }
+    @media all and (max-width: $screen-xxs-max) {
+        padding-top: 12px;
+        &:before {
+            height: 6px;
+        }
+    }
 }
 
 // -- Breadcrumbs -- //
 .breadcrumbs {
-  font-size: 14px;
-  margin: 14px 0 13px;
-  color: $se-grey;
-  padding-left: 0;
-  // TODO refactor to be just .breadcrumbs-item //
-  .breadcrumbs__item,
-  .breadcrumb-item {
-    display: inline-block;
-    margin-bottom: 0;
-    margin-left: 0;
-    padding: 0;
-    position: relative;
-    text-transform: capitalize;
-    &:after {
-      font-family: FontAwesome;
-      content: "\f105";
-      font-size: 16px;
-      color: $se-grey;
-      font-weight: 300;
-      padding: 0 3px 0 8px;
-      line-height: 14px;
-      box-sizing: inherit;
-      position: relative;
-      top: 1px;
+    font-size: 14px;
+    margin: 0 0 13px;
+    color: $se-grey;
+    padding-left: 0;
+    // TODO refactor to be just .breadcrumbs-item //
+    .breadcrumbs__item,
+    .breadcrumb-item {
+        display: inline-block;
+        margin-bottom: 0;
+        margin-left: 0;
+        padding: 0;
+        position: relative;
+        text-transform: capitalize;
+        &:after {
+            font-family: FontAwesome;
+            content: "\f105";
+            font-size: 16px;
+            color: $se-grey;
+            font-weight: 300;
+            padding: 0 3px 0 8px;
+            line-height: 14px;
+            box-sizing: inherit;
+            position: relative;
+            top: 1px;
+        }
+        &:before {
+            content: "";
+            padding: 0;
+        }
+        &:last-of-type:after {
+            content: none;
+        }
     }
-    &:before {
-      content: "";
-      padding: 0;
+    .breadcrumb > .active {
+        color: $se-grey;
     }
-    &:last-of-type:after {
-      content: none;
-    }
-  }
 }
 
+.breadcrumbs ol.breadcrumb {
+    padding: 0;
+    .breadcrumb-item {
+        @media all and (max-width: $screen-xxs-max) {
+            float: left;
+            clear: left;
+        }
+    }
+}
 
+a[href^="tel:"] {
+    color: $se-blue;
+    text-decoration: none;
+}
+
+.form-group p.bold-heading {
+    font-size: 19px;
+    line-height: 28px;
+    font-weight: 700;
+    margin-top: 7px;
+    margin-bottom: 0;
+}
+
+.optional {
+    color: $se-mid-grey;
+}
+
+caption {
+    margin-left: 8px !important;
+}
+
+/*------------------------------------*\
+    $INFORMATIONAL NOTES
+\*------------------------------------*/
+
+//.info-note.note:before {
+//    background: url("../img/icons/note.png") no-repeat 0 0 transparent !important;
+//}
+
+//@media only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 2.6 / 2), only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min-device-pixel-ratio: 1.3), only screen and (min-resolution: 1.3dppx) {
+//.info-note.note:before {
+//background-image: url("../img/icons/note_@2x.png") !important;
+//background-size: 26px 26px !important;
+
+//    font-family: FontAwesome;
+//    content: "\f071";
+//    padding: 0 5px 0 0;
+//}
+
+//}
+//.info-note.caution:before {
+//  background: url("../img/icons/caution.png") no-repeat 0 0 transparent !important;
+//}
+//@media only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 2.6 / 2), only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min-device-pixel-ratio: 1.3), only screen and (min-resolution: 1.3dppx) {
+
+//}
+
+.info-note {
+    &.note {
+        &:before {
+            background: none;
+            content: "\f06a";
+            left: 10px;
+            position: absolute;
+            top: 25px;
+            width: 36px;
+            font-family: FontAwesome;
+            padding: 0 5px 0 0;
+            font-size: 30px;
+            @media all and (max-width: $screen-xxs-max) {
+                top: 32px;
+            }
+        }
+    }
+    &.caution {
+        font-size: 16px !important;
+        border-width: 1px 0;
+        border-bottom-width: 1px;
+        border-color: $se-grey;
+        border-bottom-color: $se-grey;
+        border-style: solid;
+        border-bottom-style: solid;
+        background-color: inherit;
+        padding: 20px 10px 27px 59px;
+        font-weight: 700;
+        @media all and (max-width: $screen-xxs-max) {
+            margin-bottom: 10px;
+            padding-bottom: 0;
+        }
+        &:before {
+            background: none;
+            content: "\f071";
+            left: 10px;
+            position: absolute;
+            top: 25px;
+            width: 36px;
+            font-family: FontAwesome;
+            padding: 0 5px 0 0;
+            font-size: 30px;
+            @media all and (max-width: $screen-xxs-max) {
+                top: 32px;
+            }
+        }
+    }
+    fieldset {
+        margin-bottom: 0;
+    }
+    input[type="radio"],
+    input[type="checkbox"] {
+        width: 0;
+        margin-left: 0;
+    }
+}
+
+.imrs-enquiry {
+    fieldset {
+        margin-top: 0;
+    }
+}
+
+.upload-wrapper {
+    .info-note.caution {
+        border-bottom: none;
+        margin-bottom: 0;
+    }
+    .info-note.caution + fieldset {
+        border-bottom: 1px solid $se-grey;
+        padding: 0 0 10px 10px;
+        margin-top: 0;
+        input {
+            margin: 0;
+        }
+        label {
+            margin-top: 0;
+        }
+        input + label.fancy-checkbox::before {
+            left: -6px;
+            top: -4px;
+            @media all and (max-width: 568px) {
+                left: 2px;
+                top: 3px;
+            }
+        }
+    }
+}
