--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -11,9 +11,11 @@
 @import "cards.scss";
 @import "component-library.scss";
 @import "components.scss";
+@import "file-upload.scss";
 @import "forms.scss";
 @import "images.scss";
 @import "layout.scss";
+@import "tables.scss";
 @import "misc.scss";
 @import "navbar.scss";
 @import "progress-indicator.scss";
