Updated buttons - added Back button

--- a/_sass/_component-library.scss
+++ b/_sass/_component-library.scss
@@ -1,7 +1,7 @@
-/* ==========================================================================
-   These styles are specific to the component library itself. 
-   Ensure that new styles are added within the body.component-library tag
-   ========================================================================== */
+// ==========================================================================
+// These styles are specific to the component library itself.
+// Ensure that new styles are added within the body.component-library tag
+// ==========================================================================
 
 body.component-library {
     .navbar {
