--- a/_sass/_file-upload.scss
+++ b/_sass/_file-upload.scss
@@ -1,7 +1,7 @@
 
-/* ==========================================================================
-   SE Custom styles for File upload
-   ========================================================================== */
+// ==========================================================================
+// SE Custom styles for File upload
+// ==========================================================================
 
 .file-upload-list {
     .file-upload-wrapper {
