--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -163,7 +163,7 @@ h2, h3, h4, h5, h6 {
             top: 1px;
         }
         &:before {
-            content: "";
+            //content: "";
             padding: 0;
         }
         &:last-of-type:after {
