--- a/_includes/code-page-breadcrumbs.html
+++ b/_includes/code-page-breadcrumbs.html
@@ -3,9 +3,9 @@
 {% assign previous="" %}
 <ol id="breadcrumbs" role="navigation" class="breadcrumbs">
     {% if num_parts == "0" or num_parts == "-1" %}
-    <li class="breadcrumb-item"><a href="/se-style-guide">Home</a></li>
+    <li class="breadcrumb-item"><a href="{{ site.baseurl}}/">Home</a></li>
     {% else %}
-    <li class="breadcrumb-item"><a href="/se-style-guide">Home</a></li>
+    <li class="breadcrumb-item"><a href="{{ site.baseurl}}/">Home</a></li>
 
     {% for unused in page.content limit:num_parts %}
     {% capture first_word %}{{ url_parts | truncatewords:1 | remove:"..."}}{% endcapture %}
