--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,20 +1,19 @@
 @import 'variables.scss';
 
-/* ==========================================================================
-   SE Custom styles for layout 
-   ========================================================================== */
-
+// ==========================================================================
+// SE Custom styles for layout
+// ==========================================================================
 
 /* Alpha / Beta banner */
 .banner {
-  background: #333;
-  color: white;
-  padding: 0.25em;
-  font-size: 0.8em;
+    background: #333;
+    color: white;
+    padding: 0.25em;
+    font-size: 0.8em;
 }
 
 .banner a {
-  color: white;
+    color: white;
 }
 
 .grey-bg {
