--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,6 @@
-
-/* ==========================================================================
-   Variables 
-   ========================================================================== */
+// ==========================================================================
+// Variables
+// ==========================================================================
 
 //variables we will move to variables.scss
 $main-font: 'Roboto', sans-serif;
@@ -26,6 +25,8 @@ $highlight-blue:    #00B4FF;
 $se-light-blue:     #2A7CB2;
 $se-blue:           #00427F;
 
+$se-beta:           #C35517;
+
 // SE Greyscale
 $se-white:              #ffffff;
 $se-grey-hover:         #f1f1f1;
@@ -40,7 +41,6 @@ $se-black:              #2F3E44;
 
 $alert-padding: 0 0 0 7px;
 $line-height-computed: 10px 0 0 0;
-
 
 // Defining Breakpoints
 
