--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,6 +1,6 @@
-// ==========================================================================
-// SE Custom styles for typography
-// ========================================================================== */
+/* ==========================================================================
+   SE Custom styles for typography 
+   ========================================================================== */
 
 // -- Headings -- //
 
@@ -113,7 +113,7 @@ h2, h3, h4, h5, h6 {
     font-weight: 500;
     padding-top: 15px;
     position: relative;
-    margin: 10px 0 15px;
+    margin: 20px 0 15px;
     &:before {
         background-color: $se-blue;
         border-radius: 8px;
