Updated font sizes + links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,8 +38,7 @@
                         </li>
 
                         <li>
-                            <a id="ctl03_lstSocialLinks_lnkSocial_4" class="newsletter" data-dms="B889811D-A686-4A66-B848-981793635F03" data-dms-event="SE - Email Subscription - Footer Link"
-                               data-dms-pageurl="https://www.scottish-enterprise.com/" href="/subscribe">Sign up for our newsletter
+                            <a id="ctl03_lstSocialLinks_lnkSocial_4" class="newsletter" href="#">Sign up for our newsletter
                                 <span class="vh"></span>
                             </a>
                         </li>
