--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -28,7 +28,7 @@
                     padding-bottom: 12px;
                     color: $se-body-grey;
                     margin: 0;
-                    font-size: 18px;
+                    font-size: 1.125em;
                     margin-right: 30px;
                 }
                 .header-panel-icon {
