--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -5,12 +5,12 @@
 // -- Headings -- //
 
 h1 {
-    font-size: 49px;
-    line-height: 56px;
+    font-size: 3.063em;
+    line-height: 3.500em;
     margin: 28px 0 25px;
     @media all and (max-width: $screen-xxs-max) {
-        font-size: 36px;
-        line-height: 42px;
+        font-size: 2.250em;
+        line-height: 2.625em;
         margin: 20px 0 15px;
     }
 }
@@ -18,50 +18,50 @@ h1 {
 // override bootstrap
 form h2 {
     margin-top: inherit;
-    font-size: 30px;
-    line-height: 40px;
+    font-size: 1.875em;
+    line-height: 2.500em;
 }
 
 h2 {
-    font-size: 30px;
-    line-height: 40px;
+    font-size: 1.875em;
+    line-height: 2.500em;
     margin: 22px 0 13px;
     @media all and (max-width: $screen-xxs-max) {
-        font-size: 24px;
-        line-height: 30px;
+        font-size: 1.500em;
+        line-height: 1.875em;
         margin: 15px 0 10px;
     }
 }
 
 h3 {
-    font-size: 19px;
-    line-height: 28px;
+    font-size: 1.188em;
+    line-height: 1.750em;
     margin: 10px 0 7px;
     @media all and (max-width: $screen-xxs-max) {
-        font-size: 16px;
-        line-height: 25px;
+        font-size: 1em;
+        line-height: 1.563em;
     }
 }
 
 h4 {
-    font-size: 16px;
-    line-height: 25px;
+    font-size: 1em;
+    line-height: 1.563em;
     margin: 10px 0 7px;
     @media all and (max-width: $screen-xxs-max) {
     }
 }
 
 h5 {
-    font-size: 14px;
-    line-height: 23px;
+    font-size: 0.875em;
+    line-height: 1.438em;
     margin: 10px 0 7px;
     @media all and (max-width: $screen-xxs-max) {
     }
 }
 
 h6 {
-    font-size: 12px;
-    line-height: 20px;
+    font-size: 0.750em;
+    line-height: 1.250em;
     margin: 10px 0 7px;
     @media all and (max-width: $screen-xxs-max) {
     }
@@ -86,18 +86,18 @@ h2, h3, h4, h5, h6 {
 }
 
 .text-large {
-    font-size: 20px;
+    font-size: 1.250em;
 }
 
 .leader {
-    font-size: 25px;
-    line-height: 34px;
+    font-size: 1.563em;
+    line-height: 2.125em;
     font-weight: 300;
     margin: 0 0 35px 0;
     word-wrap: break-word;
     @media all and (max-width: $screen-xxs-max) {
-        font-size: 19px;
-        line-height: 28px;
+        font-size: 1.188em;
+        line-height: 1.750em;
         margin-bottom: 15px;
     }
 }
@@ -137,7 +137,7 @@ h2, h3, h4, h5, h6 {
 
 // -- Breadcrumbs -- //
 .breadcrumbs {
-    font-size: 14px;
+    font-size: 0.875em;
     margin: 0 0 13px;
     color: $se-grey;
     padding-left: 0;
@@ -153,11 +153,11 @@ h2, h3, h4, h5, h6 {
         &:after {
             font-family: FontAwesome;
             content: "\f105";
-            font-size: 16px;
+            font-size: 1em;
             color: $se-grey;
             font-weight: 300;
             padding: 0 3px 0 8px;
-            line-height: 14px;
+            line-height: 0.875em;
             box-sizing: inherit;
             position: relative;
             top: 1px;
@@ -191,8 +191,8 @@ a[href^="tel:"] {
 }
 
 .form-group p.bold-heading {
-    font-size: 19px;
-    line-height: 28px;
+    font-size: 1.188em;
+    line-height: 1.750em;
     font-weight: 700;
     margin-top: 7px;
     margin-bottom: 0;
@@ -212,7 +212,7 @@ caption {
 
 .info-note {
     clear: both;
-    line-height: 21px;
+    line-height: 1.313em;
     margin: 35px 0;
     position: relative;
     top: 4px;
@@ -221,7 +221,7 @@ caption {
         border-width: 1px 0;
         border-color: $se-grey;
         border-style: solid;
-        font-size: 17px;
+        font-size: 1.063em;
         &:before {
             background: none;
             content: "\f05a";
@@ -231,7 +231,7 @@ caption {
             width: 36px;
             font-family: FontAwesome;
             padding: 0 5px 0 0;
-            font-size: 30px;
+            font-size: 1.875em;
             color: $se-blue;
             @media all and (max-width: $screen-md-min) {
                 top: 25px;
@@ -239,7 +239,7 @@ caption {
         }
     }
     &.caution {
-        font-size: 16px !important;
+        font-size: 1em !important;
         border-width: 1px 0;
         border-color: $se-grey;
         border-style: solid;
@@ -257,7 +257,7 @@ caption {
             width: 36px;
             font-family: FontAwesome;
             padding: 0 5px 0 0;
-            font-size: 30px;
+            font-size: 1.875em;
             color: $se-amber;
             @media all and (max-width: $screen-md-min) {
                 top: 30px;
@@ -271,6 +271,9 @@ caption {
     input[type="checkbox"] {
         width: 0;
         margin-left: 0;
+    }
+    ul {
+        margin-left: 16px;
     }
 }
 
