--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://scottishgovernment.github.io/assets/css/main_forms.css">
     <link rel="stylesheet" href="https://scottishgovernment.github.io/assets/css/form.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
-    <link rel="canonical" href="http://localhost:4000/">
+    <!--<link rel="canonical" href="http://localhost:4000/">-->
     <link rel="alternate" type="application/rss+xml" title="SE Pattern Library" href="/feed.xml">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 </head>
