--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -3,7 +3,7 @@
 // ==========================================================================
 
 .button {
-    line-height: 1.5;
+    line-height: 1.500em;
     height: auto;
     padding-top: 1em;
     padding-bottom: 1em;
@@ -69,7 +69,7 @@
     @media screen and (max-width: $screen-xs-min) {
         width: 100% !important;
         margin-right: 0 !important;
-    }    
+    }
 }
 
 .button {
@@ -84,7 +84,6 @@
             position: relative;
             top: 1px;
         }
-        
         @media all and (max-width: $screen-xxs-max) {
             text-align: left;
         }
