--- a/_sass/_file-upload.scss
+++ b/_sass/_file-upload.scss
@@ -54,7 +54,7 @@
             label {
                 font-weight: 300;
                 font-style: italic;
-                font-size: 16px;
+                font-size: 1em;
             }
             input {
                 background-color: $se-white;
@@ -145,7 +145,7 @@
     right: 0;
     margin: 0;
     padding: 0;
-    font-size: 20px;
+    font-size: 1.250em;
     cursor: pointer;
     opacity: 0;
     filter: alpha(opacity=0);
