--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -9,7 +9,7 @@ input[type=number],
 input[type=password],
 input[type=email] {
     margin-top: 7px;
-    font-size: 16px;
+    font-size: 1em;
     height: 42px;
     border: 1px solid $se-grey;
     border-radius: 0;
@@ -19,7 +19,7 @@ input[type="radio"],
 input[type="checkbox"] {
     display: inline-block;
     width: 1px;
-    font-size: 40px;
+    font-size: 2.500em;
     margin: 0 0 0 10px;
 }
 
@@ -36,7 +36,7 @@ label {
     margin-bottom: 7px;
     font-family: din-mediumregular, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
     @media all and (max-width: $screen-xxs-max) {
-        font-size: 16px;
+        font-size: 1em;
     }
 }
 
@@ -113,8 +113,8 @@ select {
 
 .form-errors ul li:before, .current-errors li:before, .server-side-errors li:before, .field-errors li:before {
     content: none;
-    font-size: 12px;
-    line-height: 13px;
+    font-size: 0.750em;
+    line-height: 0.813em;
     vertical-align: middle;
 }
 
@@ -129,7 +129,7 @@ textarea {
     display: inline-block;
     font-weight: normal;
     margin-right: 30px;
-    line-height: 22px;
+    line-height: 1.375em;
 }
 
 .input-small {
@@ -157,7 +157,7 @@ textarea {
 }
 
 .char-count {
-    font-size: 14px !important;
+    font-size: 0.875em !important;
     color: $se-mid-grey;
 }
 
