--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -14,7 +14,7 @@
         padding-top: 0;
         & > a {
             padding: 15px;
-            line-height: 46px;
+            line-height: 2.875em;
             text-decoration: none;
         }
     }
