--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,10 +1,8 @@
-<ol id="breadcrumbs" role="navigation" class="breadcrumbs">
-    <li class="breadcrumbs__item" itemprop="url">
-        <a class="breadcrumbs__link" href="{{ site.baseurl}}/" data-gtm="bread-0">
-            <span class="breadcrumbs__title" itemprop="title">Home</span>
-        </a>
-    </li>
-    <li id="MYGOV-77" class="breadcrumbs__item" itemprop="url">
-            <span class="breadcrumbs__title" itemprop="title">{{ page.title }}</span>
-    </li>
-</ol>
+<nav class="breadcrumbs" aria-label="Breadcrumb">       
+   <ol id="breadcrumbs">
+        <li class="breadcrumbs__item" itemprop="url"><a href="{{ site.baseurl}}/" data-gtm="bread-0"><span class="breadcrumbs__title" itemprop="title">Home</span></a>
+        </li>
+        
+        <li class="breadcrumbs__item" itemprop="url"><span class="breadcrumbs__title" itemprop="title">{{ page.title }}</span></li>
+    </ol>
+</nav>
