--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer id="se-footer" class="footer" role="contentinfo">
+<footer id="se-footer" class="footer">
 
-    <section class="social-footer">
+    <div class="social-footer">
         <div class="container">
 
             <div class="row">
@@ -48,9 +48,9 @@
             </div>
         </div>
 
-    </section>
+    </div>
 
-    <section class="main-footer">
+    <div class="main-footer">
         <div class="container">
             <div class="row">
                 <nav class="col-md-8">
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
 </footer>
 
