--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/scottish-enterprise.svg" alt="Scottish Enterprise"></a> 
+      <a class="navbar-brand" href="{{ site.baseurl}}/"><img src="{{site.baseurl}}/images/se-logo.jpg" alt="Scottish Enterprise"></a> 
     </div>
     
     <div id="navbar" class="navbar-collapse collapse">
