--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,15 +16,22 @@ $se-dis-secondary:  #93BFBD;
 $black:             #000000;
 
 // SE Colour Pallette
-$se-red:            #d60000;
+$se-dark-orange:    #BF3A27;
+$se-red:            #D60000;
 $se-orange:         #D65811;
 $se-amber:          #FF9900;
+$se-yellow:         #FDB813;
 $se-dark-green:     #03634D;
 $accessible-green:  #128512;
-$se-bright-green:   #00cc00;
-$highlight-blue:    #00B4FF;
+$se-bright-green:   #00CC00;
+$se-turquoise:      #00AAAD;
 $se-light-blue:     #2A7CB2;
 $se-blue:           #00427F;
+$se-purple:         #610e6c;
+
+// SE Secondary colours
+$highlight-blue:    #00B4FF;
+
 
 // SE Greyscale
 $se-white:              #ffffff;
