--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <!--<a class="navbar-brand" href="{{ site.baseurl}}/"><img src="{{site.baseurl}}/images/se-logo.jpg" alt="Scottish Enterprise"></a> -->
-      <a class="navbar-brand" href="/"><img src="/images/se-logo.jpg" alt="Scottish Enterprise logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="images/se-logo.jpg" alt="Scottish Enterprise logo"></a>
     </div>
     
     <div id="navbar" class="navbar-collapse collapse">
@@ -16,7 +16,7 @@
       <!--<li><a href="{{ site.baseurl}}/">Home</a></li>-->
       <!--<li><a href="{{ site.baseurl}}/about/">About</a></li>-->
       <!--<li><a href="{{ site.baseurl}}/menu/">Menu</a></li>-->
-      <li><a href="/">Home</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li><a href="/about/">About</a></li>
       <li><a href="/menu/">Menu</a></li>
     </ul>
