fixes to links commit from webstorm (?)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -74,7 +74,7 @@
 
                 <div class="col-md-4 footer-logo">
                     <!--<img src="{{site.baseurl}}/assets/img/SE-logo-landscape-trans.png" alt="Scottish Enterprise logo" />-->
-                    <img src="/assets/img/SE-logo-landscape-trans.png" alt="Scottish Enterprise logo" />
+                    <img src="assets/img/SE-logo-landscape-trans.png" alt="Scottish Enterprise logo" />
                 </div>
             </div>
         </div>
@@ -88,5 +88,5 @@
 
 <!--<script src="{{ site.baseurl}}/assets/javascripts/bootstrap.min.js"></script>-->
 <!--<script src="{{ site.baseurl}}/assets/javascripts/main.js"></script>-->
-<script src="/assets/javascripts/bootstrap.min.js"></script>
-<script src="/assets/javascripts/main.js"></script>
+<script src="assets/javascripts/bootstrap.min.js"></script>
+<script src="assets/javascripts/main.js"></script>
