--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,9 +16,9 @@
       <!--<li><a href="{{ site.baseurl}}/">Home</a></li>-->
       <!--<li><a href="{{ site.baseurl}}/about/">About</a></li>-->
       <!--<li><a href="{{ site.baseurl}}/menu/">Menu</a></li>-->
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="/about/">About</a></li>
-      <li><a href="/menu/">Menu</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about/">About</a></li>
+      <li><a href="menu/">Menu</a></li>
     </ul>
     </div><!--/.navbar-collapse -->
   </div>
