--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,47 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SE Pattern Library - {{ page.title }}</title>
-  <meta name="description" content="Scottish Enterprise - Visual Style Guide">
-  <link rel="stylesheet" href="https://resources.mygov.scot/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/css/styles.css">
-  <link rel="stylesheet" href="/assets/css/brand.css">
-  <link rel="alternate" type="application/rss+xml" title="SE Pattern Library" href="feed.xml">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-</head>
+{% include head.html %}
 
 <body class="component-library">
-
-<nav class="navbar">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<!--<a class="navbar-brand" href="{{ site.baseurl}}/"><img src="{{site.baseurl}}/images/se-logo.jpg" alt="Scottish Enterprise"></a> -->
-			<a class="navbar-brand" href="/index.html"><img src="/images/se-logo.jpg" alt="Scottish Enterprise logo"></a>
-		</div>
-
-		<div id="navbar" class="navbar-collapse collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/index.html">Home</a></li>
-				<li><a href="/about/index.html">About</a></li>
-				<li><a href="/menu/index.html">Menu</a></li>
-			</ul>
-		</div><!--/.navbar-collapse -->
-	</div>
-</nav>
-
-
-
+{% include nav.html %}
 <div class="container"> 
-
+  <!-- Main component for a primary marketing message or call to action --> 
+  <!-- <div class="jumbotron"></div> -->
   {{ content }}  
 
 </div>
