adding baseufl to links

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,10 +8,8 @@
     <meta name="description" content="Scottish Enterprise - Visual Style Guide">
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="https://resources.mygov.scot/assets/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">-->
-    <!--<link rel="stylesheet" href="{{site.baseurl}}/assets/css/brand.css">-->
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/css/brand.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/brand.css">
     <link rel="alternate" type="application/rss+xml" title="SE Pattern Library" href="/feed.xml">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 </head>
