--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -86,7 +86,5 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
 
-<!--<script src="{{ site.baseurl}}/assets/javascripts/bootstrap.min.js"></script>-->
-<!--<script src="{{ site.baseurl}}/assets/javascripts/main.js"></script>-->
-<script src="/assets/javascripts/bootstrap.min.js"></script>
-<script src="/assets/javascripts/main.js"></script>
+<script src="{{ site.baseurl}}/assets/javascripts/bootstrap.min.js"></script>
+<script src="{{ site.baseurl}}/assets/javascripts/main.js"></script>
