--- a/_layouts/code-examples.html
+++ b/_layouts/code-examples.html
@@ -14,7 +14,8 @@
             <div class="col-sm-12">            
                
                 <div class="demo-box">
-                    <span class="example">Example</span> {{ content }}
+                    <span class="example">Example</span>
+                    {{ content }}
                 </div>
                 
                 <button class="btn btn-primary margin-bottom" onclick="copyToClipboard('#code-snippet')">Copy to clipboard</button>
