--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -73,8 +73,7 @@
                 </nav>
 
                 <div class="col-md-4 footer-logo">
-                    <!--<img src="{{site.baseurl}}/assets/img/SE-logo-landscape-trans.png" alt="Scottish Enterprise logo" />-->
-                    <img src="/assets/img/SE-logo-landscape-trans.png" alt="Scottish Enterprise logo" />
+                    <img src="{{site.baseurl}}/assets/img/SE-logo-landscape-trans.png" alt="Scottish Enterprise logo" />
                 </div>
             </div>
         </div>
