--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -22,107 +22,54 @@ body {
     }
 }
 
-// Reference Din fonts for headings //
+ Reference Din fonts for headings //
 @font-face {
     font-family: 'din-blackregular';
-    src: url('/assets/fonts/Din/din-blac-webfont.eot');
-    src: url('/assets/fonts/Din/din-blac-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/assets/fonts/Din/din-blac-webfont.woff') format('woff'),
-    url('/assets/fonts/Din/din-blac-webfont.ttf') format('truetype'),
-    url('/assets/fonts/Din/din-blac-webfont.svg#din-blackregular') format('svg');
+    src: url('/se-style-guide/assets/fonts/Din/din-blac-webfont.eot');
+    src: url('/se-style-guide/assets/fonts/Din/din-blac-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/se-style-guide/assets/fonts/Din/din-blac-webfont.woff') format('woff'),
+    url('/se-style-guide/assets/fonts/Din/din-blac-webfont.ttf') format('truetype'),
+    url('/se-style-guide/assets/fonts/Din/din-blac-webfont.svg#din-blackregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'din-boldregular';
-    src: url('/assets/fonts/Din/din-bold-webfont.eot');
-    src: url('/assets/fonts/Din/din-bold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/assets/fonts/Din/din-bold-webfont.woff') format('woff'),
-    url('/assets/fonts/Din/din-bold-webfont.ttf') format('truetype'),
-    url('/assets/fonts/Din/din-bold-webfont.svg#din-boldregular') format('svg');
+    src: url('/se-style-guide/assets/fonts/Din/din-bold-webfont.eot');
+    src: url('/se-style-guide/assets/fonts/Din/din-bold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/se-style-guide/assets/fonts/Din/din-bold-webfont.woff') format('woff'),
+    url('/se-style-guide/assets/fonts/Din/din-bold-webfont.ttf') format('truetype'),
+    url('/se-style-guide/assets/fonts/Din/din-bold-webfont.svg#din-boldregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'din-lightregular';
-    src: url('/assets/fonts/Din/din-ligh-webfont.eot');
-    src: url('/assets/fonts/Din/din-ligh-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/assets/fonts/Din/din-ligh-webfont.woff') format('woff'),
-    url('/assets/fonts/Din/din-ligh-webfont.ttf') format('truetype'),
-    url('/assets/fonts/Din/din-ligh-webfont.svg#din-lightregular') format('svg');
+    src: url('/se-style-guide/assets/fonts/Din/din-ligh-webfont.eot');
+    src: url('/se-style-guide/assets/fonts/Din/din-ligh-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/se-style-guide/assets/fonts/Din/din-ligh-webfont.woff') format('woff'),
+    url('/se-style-guide/assets/fonts/Din/din-ligh-webfont.ttf') format('truetype'),
+    url('/se-style-guide/assets/fonts/Din/din-ligh-webfont.svg#din-lightregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'din-mediumregular';
-    src: url('/assets/fonts/Din/din-medi-webfont.eot');
-    src: url('/assets/fonts/Din/din-medi-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/assets/fonts/Din/din-medi-webfont.woff') format('woff'),
-    url('/assets/fonts/Din/din-medi-webfont.ttf') format('truetype'),
-    url('/assets/fonts/Din/din-medi-webfont.svg#din-mediumregular') format('svg');
+    src: url('/se-style-guide/assets/fonts/Din/din-medi-webfont.eot');
+    src: url('/se-style-guide/assets/fonts/Din/din-medi-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/se-style-guide/assets/fonts/Din/din-medi-webfont.woff') format('woff'),
+    url('/se-style-guide/assets/fonts/Din/din-medi-webfont.ttf') format('truetype'),
+    url('/se-style-guide/assets/fonts/Din/din-medi-webfont.svg#din-mediumregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'din-regularregular';
-    src: url('/assets/fonts/Din/din-regu-webfont.eot');
-    src: url('/assets/fonts/Din/din-regu-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/assets/fonts/Din/din-regu-webfont.woff') format('woff'),
-    url('/assets/fonts/Din/din-regu-webfont.ttf') format('truetype'),
-    url('/assets/fonts/Din/din-regu-webfont.svg#din-regularregular') format('svg');
+    src: url('/se-style-guide/assets/fonts/Din/din-regu-webfont.eot');
+    src: url('/se-style-guide/assets/fonts/Din/din-regu-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/se-style-guide/assets/fonts/Din/din-regu-webfont.woff') format('woff'),
+    url('/se-style-guide/assets/fonts/Din/din-regu-webfont.ttf') format('truetype'),
+    url('/se-style-guide/assets/fonts/Din/din-regu-webfont.svg#din-regularregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
-
-
-// Reference Din fonts for headings //
-//@font-face {
-//    font-family: 'din-blackregular';
-//    src: url('/se-style-guide/assets/fonts/Din/din-blac-webfont.eot');
-//    src: url('/se-style-guide/assets/fonts/Din/din-blac-webfont.eot?#iefix') format('embedded-opentype'),
-//    url('/se-style-guide/assets/fonts/Din/din-blac-webfont.woff') format('woff'),
-//    url('/se-style-guide/assets/fonts/Din/din-blac-webfont.ttf') format('truetype'),
-//    url('/se-style-guide/assets/fonts/Din/din-blac-webfont.svg#din-blackregular') format('svg');
-//    font-weight: normal;
-//    font-style: normal;
-//}
-//@font-face {
-//    font-family: 'din-boldregular';
-//    src: url('/se-style-guide/assets/fonts/Din/din-bold-webfont.eot');
-//    src: url('/se-style-guide/assets/fonts/Din/din-bold-webfont.eot?#iefix') format('embedded-opentype'),
-//    url('/se-style-guide/assets/fonts/Din/din-bold-webfont.woff') format('woff'),
-//    url('/se-style-guide/assets/fonts/Din/din-bold-webfont.ttf') format('truetype'),
-//    url('/se-style-guide/assets/fonts/Din/din-bold-webfont.svg#din-boldregular') format('svg');
-//    font-weight: normal;
-//    font-style: normal;
-//}
-//@font-face {
-//    font-family: 'din-lightregular';
-//    src: url('/se-style-guide/assets/fonts/Din/din-ligh-webfont.eot');
-//    src: url('/se-style-guide/assets/fonts/Din/din-ligh-webfont.eot?#iefix') format('embedded-opentype'),
-//    url('/se-style-guide/assets/fonts/Din/din-ligh-webfont.woff') format('woff'),
-//    url('/se-style-guide/assets/fonts/Din/din-ligh-webfont.ttf') format('truetype'),
-//    url('/se-style-guide/assets/fonts/Din/din-ligh-webfont.svg#din-lightregular') format('svg');
-//    font-weight: normal;
-//    font-style: normal;
-//}
-//@font-face {
-//    font-family: 'din-mediumregular';
-//    src: url('/se-style-guide/assets/fonts/Din/din-medi-webfont.eot');
-//    src: url('/se-style-guide/assets/fonts/Din/din-medi-webfont.eot?#iefix') format('embedded-opentype'),
-//    url('/se-style-guide/assets/fonts/Din/din-medi-webfont.woff') format('woff'),
-//    url('/se-style-guide/assets/fonts/Din/din-medi-webfont.ttf') format('truetype'),
-//    url('/se-style-guide/assets/fonts/Din/din-medi-webfont.svg#din-mediumregular') format('svg');
-//    font-weight: normal;
-//    font-style: normal;
-//}
-//@font-face {
-//    font-family: 'din-regularregular';
-//    src: url('/se-style-guide/assets/fonts/Din/din-regu-webfont.eot');
-//    src: url('/se-style-guide/assets/fonts/Din/din-regu-webfont.eot?#iefix') format('embedded-opentype'),
-//    url('/se-style-guide/assets/fonts/Din/din-regu-webfont.woff') format('woff'),
-//    url('/se-style-guide/assets/fonts/Din/din-regu-webfont.ttf') format('truetype'),
-//    url('/se-style-guide/assets/fonts/Din/din-regu-webfont.svg#din-regularregular') format('svg');
-//    font-weight: normal;
-//    font-style: normal;
-//}
