--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -22,7 +22,7 @@ body {
     }
 }
 
- Reference Din fonts for headings //
+ //Reference Din fonts for headings //
 @font-face {
     font-family: 'din-blackregular';
     src: url('/se-style-guide/assets/fonts/Din/din-blac-webfont.eot');
